data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2561.wast
;; 2. **Test Description**:    Use a `block` with a type index (`typeidx`) that does not match the expected function type signature and check that the block initialization fails.    **Constraint:** Validating the interpretation and application of `typeidx` for function signatures.    **Relation to Type Mismatch:** Ensures that function type signatures are correctly enforced.

(assert_invalid
  (module (type (func (param i32) (result f32)))
    (func $type-index-mismatch
      (block (type 0) (i32.const 1) (f32.const 1.0))
    )
  )
  "type mismatch"
)